# aether2

./: .gitignore  README.md  docker-compose.yml  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
backend/: .env.example  Dockerfile  README.md  db.js  index.js  package-lock.json  package.json  push.js
backend_rust/: Cargo.toml  README.md
backend_rust/src/: main.rs
lib/: main.dart
lib/screens/: chat_screen.dart  home_page.dart  login_screen.dart  new_dm_screen.dart  new_group_screen.dart  settings_screen.dart  signup_screen.dart
lib/services/: app_preferences.dart  app_update_service.dart  auth_service.dart  backend_service.dart  chat_settings_service.dart  crypto_service.dart  identity_key_service.dart  notification_service.dart  peer_trust_service.dart  push_service.dart  realtime_service.dart  secret_storage.dart  session_service.dart
test/: widget_test.dart
