[package]
name = "aether-backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.14"
jsonwebtoken = "8"
regex = "1"
once_cell = "1"
actix-web-actors = "4"
chrono = { version = "0.4", features = ["serde"] }
